# goit-python-tp-assistant

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/core/: exceptions.py
app/core/base/: stateful_service.py
app/core/contacts_book/: contacts_book.py
app/core/notes/: notepad.py
app/presentation/: main_menu_controller.py  promt_helpers.py
app/presentation/contacts/: contacts_controller.py  contacts_management_controller.py  contacts_search_controller.py
app/presentation/infrastructure/decorators/: input_error.py
app/presentation/notes/: notes_controller.py  notes_management_controller.py  notes_search_controller.py
