[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "goit-python-tp-assistant"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "annotated-doc==0.0.4",
    "click==8.3.1",
    "markdown-it-py==4.0.0",
    "mdurl==0.1.2",
    "prompt_toolkit==3.0.52",
    "Pygments==2.19.2",
    "rich==14.3.3",
    "shellingham==1.5.4",
    "wcwidth==0.6.0",
]

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
assistant = "main:main"
